# Spike_detector

./: .gitignore  GITHUB_PUBLISH.md  README.md  gui_preprocess_V3.3.py  pyproject.toml
.github/workflows/: build-windows-exe.yml
data/Alex/: 3_2222.xlsx  Alex_analyzed.npz
data/Alex/3_2222/: 3_2222_analyzed.npz
data/Best1/: A20_1ROI_5.5kHz.xlsx
data/Best1/A20_1ROI_5.5kHz/: A20_1ROI_5.5kHz_analyzed.npz
data/Best3/: A33_1ROI_2.78kHz.xlsx
data/CS_templates/: detected_cs_templates.npz
data/PC_GrC_puff/: PC_GrC_puff_1.xlsx  PC_GrC_puff_10.xlsx  PC_GrC_puff_11.xlsx  PC_GrC_puff_12.xlsx  PC_GrC_puff_13.xlsx  PC_GrC_puff_2.xlsx  PC_GrC_puff_3.xlsx  PC_GrC_puff_5.xlsx  PC_GrC_puff_6.xlsx  PC_GrC_puff_7.xlsx  PC_GrC_puff_8.xlsx  PC_GrC_puff_9.xlsx
data/PC_GrC_puff/11_20260211_A30_ASAP7_kv_900Cre_CrusI_puff/: 0_48.ome.tiff.metadata.txt
data/PC_GrC_puff/PC_GrC_puff_1/: PC_GrC_puff_1_analyzed.npz
data/PC_GrC_puff/PC_GrC_puff_10/: PC_GrC_puff_10_analyzed.npz
data/PC_GrC_puff/PC_GrC_puff_11/: PC_GrC_puff_11_analyzed.npz
data/SS_3/: 3_2222.xlsx  SS_3_analyzed.npz
data/SS_4/: 4_1666.xlsx  SS_4_analyzed.npz
data/SS_5/: 5_2222.xlsx  SS_5_analyzed.npz
data/SS_6/: 6_1851.xlsx  SS_6_analyzed.npz  SS_6_analyzed_analyzed.npz
data/SS_7/: 7_1587_25.xlsx  SS_7_analyzed.npz
data/SS_8/: 8_1388.xlsx  ~$8_1388.xlsx
data/SS_templates/: detected_ss_templates.npz  templates_selected.npz  templates_selected2.npz
packaging/pyinstaller/: spike_detector.spec
src/spike_detector/: __init__.py  app.py  gui.py
tests/: conftest.py
tests/core/: test_detection_core.py
(+21 files in other folders)
